# icebreaker-v2

./: .gitignore  README.md  icebreaker.toml  pyproject.toml  tool_use_plan.md
examples/: offline.toml
src/icebreaker/: __init__.py  __main__.py  cli.py  config.py  setup.py
src/icebreaker/llm/: base.py  factory.py  openai_compatible.py
src/icebreaker/repl/: __init__.py  chat.py  commands.py
src/icebreaker/storage/: sessions.py
src/icebreaker/tools/: command_exec.py  local_knowledge.py  web_search.py
src/icebreaker/ui/: console.py
tests/: test_backend.py  test_chat_repl.py  test_config.py  test_local_knowledge.py  test_persistence.py  test_repl_commands.py  test_setup.py  test_web_search.py
