[project]
name = "icebreaker"
version = "0.1.0"
description = "Terminal-first security assistant with local chat session persistence."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
icebreaker = "icebreaker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icebreaker"]
